--- a/styles/about/header.css
+++ b/styles/about/header.css
@@ -1,7 +1,14 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Work Sans', 'Roboto', 'Ubuntu', sans-serif;
+
+}
+
 .header {
     position: relative;
     background-position: center;
-    height: 50vh;
+    min-height: 50vh;
     width: 100%;
     color: white;
     justify-content: center;
